# bot-wpp

.tmp.driveupload/: 364055  364057  364059  364061  364065  364067  364069  364071  364073  364075  364079  364083  364085  364089  364091  364093  364095  364099  364101  364105  364107  364109  364111  364115  364117  364119  364121  364125  364127  364129  364131  364135  364137  364141  364143  364145  364147  364151  364153  364157  (+7048 more)
docker-chatbot/: .env  Dockerfile  READM.md  docker-compose.yml  main.py  requirements.txt
docker-consumer/: .env  .gitignore  Dockerfile  READM.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker-consumer/config/: config.json
docker-consumer/src/: app.py  config.py  mongo_client.py  rabbitmq_consumer.py  run_ai_worker.py  run_preparer_worker.py
docker-consumer/src/consumer/: processing.py  rabbitmq_consumer.py
docker-consumer/src/dao/: message_dao.py
docker-consumer/src/services/: sanitizer.py  worker_ai.py  worker_preparer.py
docker-consumer/src/utils/: logger.py  mongo_client.py  rabbit_client.py
docker-consumer/tests/: test_processing.py
docker-consumer/utils/: mongo_client.py
docker-webhook/: .gitignore  Dockerfile  READM.md  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
docker-webhook/config/: config.json
docker-webhook/src/: app.py  rabbitmq.py  utils.py
docker-webhook/src/producer/: rabbitmq.py
docker-webhook/src/tests/: generate_signature.py  payload.json
docker-webhook/src/utils/: logger.py  validators.py
(+66 files in other folders)
