# Arquivo: pyproject.toml

[tool.poetry]
name = "data-sanitizer-service"
version = "1.0.0"
description = "Serviço para processar, sanitizar e preparar mensagens para IA."
authors = ["Seu Nome <seu_email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
pymongo = "^4.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mongomock = "^4.1.2"
black = "^24.4.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"