[tool.poetry]
name = "whatsapp-webhook-service"
version = "1.0.0"
description = "Serviço de webhook para receber mensagens e publicá-las no RabbitMQ."
authors = ["Seu Nome <seu_email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
gunicorn = "^22.0.0"
gevent = "^24.2.1"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
